--- a/index.html
+++ b/index.html
@@ -7,23 +7,31 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Google Fonts for Playfair Display -->
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+
+  <!-- ✅ NEW SEPARATED CSS FILES -->
+  <link rel="stylesheet" href="css/base.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
 
-  <!-- Navigation -->
+<!-- ✅ Navigation -->
 <nav class="navbar navbar-expand-lg custom-navbar">
   <div class="container d-flex align-items-center">
-    <!-- Logo and Website Name -->
     <a href="index.html" class="navbar-brand d-flex align-items-center">
       <img src="assets/img/logo/website logo.png" alt="TuneFolio Logo" class="website-logo me-2">
       <span class="site-name">TuneFolio</span>
     </a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav custom-nav-links">
         <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
@@ -35,99 +43,271 @@
   </div>
 </nav>
 
-  <main class="container py-5">
+<main class="container py-5">
+
+  <!-- Welcome Text -->
   <p class="welcome-text">Welcome to TuneFolio!</p>
-  <h1 class="text-center mb-5 text-light featured-playlists-title">Featured Songs</h1>
-  <div class="carousel-row">
-    <!-- 🎵 Coffeehouse Nights -->
-    <section>
-      <h2 class="text-center text-warning mb-3">☕ Coffeehouse Nights</h2>
-      <div id="carouselCoffeehouse" class="carousel slide custom-carousel" data-bs-ride="carousel">
-        <div class="carousel-inner text-center">
+  
+  <div class="featured-title-lines">
+    <hr class="featured-hr" />
+    <h1 class="featured-playlists-title text-light">Featured Songs</h1>
+    <hr class="featured-hr" />
+  </div>
+
+  <!-- Featured Playlist Carousels (3 side-by-side) -->
+  <div class="row justify-content-center g-4">
+
+    <!-- ☕ Coffeehouse Nights -->
+    <div class="col-md-4 d-flex flex-column align-items-center">
+      <h2 class="playlist-title text-warning mb-3">☕ Coffeehouse Nights</h2>
+
+      <div id="carouselCoffeehouse" class="carousel slide featured-carousel" data-bs-ride="carousel">
+        <div class="carousel-inner">
+
           <div class="carousel-item active">
-            <img src="assets/img/featured/kahel na langit maki.jpg" class="carousel-img" alt="Maki - Kahel na Langit">
-            <h5 class="mt-3 text-light">Maki – Kahel na Langit</h5>
+            <div class="song-wrapper position-relative">
+              <img src="assets/img/featured/kahel na langit maki.jpg" class="featured-cover" alt="Maki - Kahel na Langit">
+
+              <!-- Play/Pause Button -->
+              <button class="play-btn position-absolute top-50 start-50 translate-middle">
+                <i class="bi bi-play-fill"></i>
+              </button>
+
+              <!-- Enhanced Add to Playlist Button -->
+              <button class="add-playlist-btn position-absolute top-0 end-0 m-2 btn btn-sm btn-outline-light" title="Add to Playlist" data-bs-toggle="tooltip" data-bs-placement="top">
+                <i class="bi bi-plus-circle"></i>
+              </button>
+
+              <!-- Audio -->
+              <audio src="assets/audio/featured/kahel maki.mp3"></audio>
+
+              <!-- Progress Bar -->
+              <input type="range" class="audio-progress position-absolute bottom-0 start-0 w-100">
+            </div>
+            <p class="song-caption text-light mt-2">Maki – Kahel na Langit</p>
           </div>
+
           <div class="carousel-item">
-            <img src="assets/img/featured/cup of joe.png" class="carousel-img" alt="Cup of Joe">
-            <h5 class="mt-3 text-light">Cup of Joe</h5>
+            <div class="song-wrapper position-relative">
+              <img src="assets/img/featured/cup of joe.png" class="featured-cover" alt="Cup of Joe">
+
+              <!-- Play/Pause Button -->
+              <button class="play-btn position-absolute top-50 start-50 translate-middle">
+                <i class="bi bi-play-fill"></i>
+              </button>
+
+              <!-- Enhanced Add to Playlist Button -->
+              <button class="add-playlist-btn position-absolute top-0 end-0 m-2 btn btn-sm btn-outline-light" title="Add to Playlist" data-bs-toggle="tooltip" data-bs-placement="top">
+                <i class="bi bi-plus-circle"></i>
+              </button>
+
+              <!-- Audio -->
+              <audio src="assets/audio/featured/pahina coj.mp3"></audio>
+
+              <!-- Progress Bar -->
+              <input type="range" class="audio-progress position-absolute bottom-0 start-0 w-100">
+            </div>
+            <p class="song-caption text-light mt-2">Pahina - Cup of Joe</p>
           </div>
+
           <div class="carousel-item">
-            <img src="assets/img/featured/elina paper planes.jpg" class="carousel-img" alt="Elina - Paper Planes">
-            <h5 class="mt-3 text-light">Elina – Paper Planes</h5>
+            <div class="song-wrapper position-relative">
+              <img src="assets/img/featured/elina paper planes.jpg" class="featured-cover" alt="Elina - Paper Planes">
+
+              <!-- Play/Pause Button -->
+              <button class="play-btn position-absolute top-50 start-50 translate-middle">
+                <i class="bi bi-play-fill"></i>
+              </button>
+
+              <!-- Enhanced Add to Playlist Button -->
+              <button class="add-playlist-btn position-absolute top-0 end-0 m-2 btn btn-sm btn-outline-light" title="Add to Playlist" data-bs-toggle="tooltip" data-bs-placement="top">
+                <i class="bi bi-plus-circle"></i>
+              </button>
+
+              <!-- Audio -->
+              <audio src="assets/audio/featured/paper planes elina.mp3"></audio>
+
+              <!-- Progress Bar -->
+              <input type="range" class="audio-progress position-absolute bottom-0 start-0 w-100">
+            </div>
+            <p class="song-caption text-light mt-2">Elina – Paper Planes</p>
           </div>
+
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselCoffeehouse" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselCoffeehouse" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </button>
       </div>
-    </section>
+    </div>
 
     <!-- ❤️ Indie Heartstrings -->
-    <section>
-      <h2 class="text-center text-danger mb-3">❤️ Indie Heartstrings</h2>
-      <div id="carouselIndie" class="carousel slide custom-carousel" data-bs-ride="carousel">
-        <div class="carousel-inner text-center">
+    <div class="col-md-4 d-flex flex-column align-items-center">
+      <h2 class="playlist-title text-danger mb-3">❤️ Indie Heartstrings</h2>
+
+      <div id="carouselIndie" class="carousel slide featured-carousel" data-bs-ride="carousel">
+        <div class="carousel-inner">
+
           <div class="carousel-item active">
-            <img src="assets/img/featured/aura ivos.jpg" class="carousel-img" alt="Aura (IV of Spades)">
-            <h5 class="mt-3 text-light">Aura (IV of Spades)</h5>
+            <div class="song-wrapper position-relative">
+              <img src="assets/img/featured/aura ivos.jpg" class="featured-cover" alt="Aura (IV of Spades)">
+
+              <!-- Play/Pause Button -->
+              <button class="play-btn position-absolute top-50 start-50 translate-middle">
+                <i class="bi bi-play-fill"></i>
+              </button>
+
+              <!-- Enhanced Add to Playlist Button -->
+              <button class="add-playlist-btn position-absolute top-0 end-0 m-2 btn btn-sm btn-outline-light" title="Add to Playlist" data-bs-toggle="tooltip" data-bs-placement="top">
+                <i class="bi bi-plus-circle"></i>
+              </button>
+
+              <!-- Audio -->
+              <audio src="assets/audio/featured/aura ivos.mp3"></audio>
+
+              <!-- Progress Bar -->
+              <input type="range" class="audio-progress position-absolute bottom-0 start-0 w-100">
+            </div>
+            <p class="song-caption text-light mt-2">IV of Spades - Aura</p>
           </div>
+
           <div class="carousel-item">
-            <img src="assets/img/featured/so good joan.jpg" class="carousel-img" alt="Joan - So Good">
-            <h5 class="mt-3 text-light">Joan – So Good</h5>
+            <div class="song-wrapper position-relative">
+              <img src="assets/img/featured/so good joan.jpg" class="featured-cover" alt="Joan - So Good">
+
+              <!-- Play/Pause Button -->
+              <button class="play-btn position-absolute top-50 start-50 translate-middle">
+                <i class="bi bi-play-fill"></i>
+              </button>
+
+              <!-- Enhanced Add to Playlist Button -->
+              <button class="add-playlist-btn position-absolute top-0 end-0 m-2 btn btn-sm btn-outline-light" title="Add to Playlist" data-bs-toggle="tooltip" data-bs-placement="top">
+                <i class="bi bi-plus-circle"></i>
+              </button>
+
+              <!-- Audio -->
+              <audio src="assets/audio/featured/so good joan.mp3"></audio>
+
+              <!-- Progress Bar -->
+              <input type="range" class="audio-progress position-absolute bottom-0 start-0 w-100">
+            </div>
+            <p class="song-caption text-light mt-2">Joan – So Good</p>
           </div>
+
           <div class="carousel-item">
-            <img src="assets/img/featured/niki oceans and engines.jpg" class="carousel-img" alt="NIKI - Oceans & Engines">
-            <h5 class="mt-3 text-light">NIKI – Oceans & Engines</h5>
+            <div class="song-wrapper position-relative">
+              <img src="assets/img/featured/niki oceans and engines.jpg" class="featured-cover" alt="NIKI - Oceans & Engines">
+
+              <!-- Play/Pause Button -->
+              <button class="play-btn position-absolute top-50 start-50 translate-middle">
+                <i class="bi bi-play-fill"></i>
+              </button>
+
+              <!-- Enhanced Add to Playlist Button -->
+              <button class="add-playlist-btn position-absolute top-0 end-0 m-2 btn btn-sm btn-outline-light" title="Add to Playlist" data-bs-toggle="tooltip" data-bs-placement="top">
+                <i class="bi bi-plus-circle"></i>
+              </button>
+
+              <!-- Audio -->
+              <audio src="assets/audio/featured/oceans niki.mp3"></audio>
+
+              <!-- Progress Bar -->
+              <input type="range" class="audio-progress position-absolute bottom-0 start-0 w-100">
+            </div>
+            <p class="song-caption text-light mt-2">NIKI – Oceans & Engines</p>
           </div>
+
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndie" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselIndie" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </button>
       </div>
-    </section>
+    </div>
 
     <!-- 🎧 Mood Swings -->
-    <section>
-      <h2 class="text-center text-info mb-3">🎧 Mood Swings</h2>
-      <div id="carouselMood" class="carousel slide custom-carousel" data-bs-ride="carousel">
-        <div class="carousel-inner text-center">
+    <div class="col-md-4 d-flex flex-column align-items-center">
+      <h2 class="playlist-title text-info mb-3">🎧 Mood Swings</h2>
+
+      <div id="carouselMood" class="carousel slide featured-carousel" data-bs-ride="carousel">
+        <div class="carousel-inner">
+
           <div class="carousel-item active">
-            <img src="assets/img/featured/casual chappell.png" class="carousel-img" alt="Chappell Roan - Casual">
-            <h5 class="mt-3 text-light">Chappell Roan – Casual</h5>
+            <div class="song-wrapper position-relative">
+            <img src="assets/img/featured/casual chappell.png" class="featured-cover" alt="Chappell Roan - Casual">
+
+            <!-- Play/Pause Button -->
+              <button class="play-btn position-absolute top-50 start-50 translate-middle">
+                <i class="bi bi-play-fill"></i>
+              </button>
+
+              <!-- Enhanced Add to Playlist Button -->
+              <button class="add-playlist-btn position-absolute top-0 end-0 m-2 btn btn-sm btn-outline-light" title="Add to Playlist" data-bs-toggle="tooltip" data-bs-placement="top">
+                <i class="bi bi-plus-circle"></i>
+              </button>
+
+              <!-- Audio -->
+              <audio src="assets/audio/featured/casual chappell.mp3"></audio>
+
+              <!-- Progress Bar -->
+              <input type="range" class="audio-progress position-absolute bottom-0 start-0 w-100">
+            </div>
+            <p class="song-caption text-light mt-2">Chappell Roan – Casual</p>
           </div>
+
           <div class="carousel-item">
-            <img src="assets/img/featured/sza bmf.jpg" class="carousel-img" alt="SZA - BMF">
-            <h5 class="mt-3 text-light">SZA – BMF</h5>
+            <div class="song-wrapper position-relative">
+              <img src="assets/img/featured/sza bmf.jpg" class="featured-cover" alt="SZA - BMF">
+
+              <!-- Play/Pause Button -->
+              <button class="play-btn position-absolute top-50 start-50 translate-middle">
+                <i class="bi bi-play-fill"></i>
+              </button>
+
+              <!-- Enhanced Add to Playlist Button -->
+              <button class="add-playlist-btn position-absolute top-0 end-0 m-2 btn btn-sm btn-outline-light" title="Add to Playlist" data-bs-toggle="tooltip" data-bs-placement="top">
+                <i class="bi bi-plus-circle"></i>
+              </button>
+
+              <!-- Audio -->
+              <audio src="assets/audio/featured/bmf sza.mp3"></audio>
+
+              <!-- Progress Bar -->
+              <input type="range" class="audio-progress position-absolute bottom-0 start-0 w-100">
+            </div>
+            <p class="song-caption text-light mt-2">SZA – BMF</p>
           </div>
+
           <div class="carousel-item">
-            <img src="assets/img/featured/ariana twilight zone.jpg" class="carousel-img" alt="Ariana Grande - Twilight Zone">
-            <h5 class="mt-3 text-light">Ariana Grande – Twilight Zone</h5>
+            <div class="song-wrapper position-relative">
+              <img src="assets/img/featured/ariana twilight zone.jpg" class="featured-cover" alt="Ariana Grande - Twilight Zone">
+
+              <!-- Play/Pause Button -->
+              <button class="play-btn position-absolute top-50 start-50 translate-middle">
+                <i class="bi bi-play-fill"></i>
+              </button>
+
+              <!-- Enhanced Add to Playlist Button -->
+              <button class="add-playlist-btn position-absolute top-0 end-0 m-2 btn btn-sm btn-outline-light" title="Add to Playlist" data-bs-toggle="tooltip" data-bs-placement="top">
+                <i class="bi bi-plus-circle"></i>
+              </button>
+
+              <!-- Audio -->
+              <audio src="assets/audio/featured/twilight ariana.mp3"></audio>
+
+              <!-- Progress Bar -->
+              <input type="range" class="audio-progress position-absolute bottom-0 start-0 w-100">
+            </div>
+            <p class="song-caption text-light mt-2">Ariana Grande – Twilight Zone</p>
           </div>
+
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselMood" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselMood" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </button>
       </div>
-    </section>
-  </div>
+    </div>
+
+  </div> <!-- /row -->
+
 </main>
 
-  <!-- Footer -->
-  <footer class="text-center py-3 border-top mt-5 text-light-50">
-    <p>&copy; 2025 Music Library. All rights reserved.</p>
-  </footer>
+<footer class="text-center py-3 border-top mt-5 text-light-50">
+  <p>&copy; 2025 Music Library. All rights reserved.</p>
+</footer>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Your custom JS -->
+<script src="js/index.js"></script>
 </html>
